2021-07-26  Yusuke Suzuki  <ysuzuki@apple.com>

        Unreviewed, speculative revert of r280193
        https://bugs.webkit.org/show_bug.cgi?id=228142

        * wtf/Vector.h:
        (WTF::Malloc>::shrinkCapacity):
        (WTF::Malloc>::shrinkToBestFit): Deleted.
        * wtf/text/AtomStringImpl.cpp:
        (WTF::UCharBufferTranslator::equal):
        (WTF::LCharBufferTranslator::equal):
        (WTF::BufferFromStaticDataTranslator::equal):
        * wtf/text/StringView.h:
        (WTF::StringView::stripLeadingMatchedCharacters): Deleted.

2021-07-26  Jer Noble  <jer.noble@apple.com>

        [Cocoa] WebKit is making GroupActivities API calls for all WebKit clients
        https://bugs.webkit.org/show_bug.cgi?id=228299
        <rdar://80802982>

        Reviewed by Eric Carlson.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2021-07-26  Per Arne  <pvollan@apple.com>

        The layout test fast/images/heic-as-background-image.html is a constant failure
        https://bugs.webkit.org/show_bug.cgi?id=228195
        <rdar://80334724>

        Reviewed by Said Abou-Hallawa.

        Add HAVE macro for the system function CMPhotoIsTileDecoderAvailable.

        * wtf/PlatformHave.h:

2021-07-26  Jer Noble  <jer.noble@apple.com>

        [iOS] All home screen web apps resume when any home screen web app is foregrounded
        https://bugs.webkit.org/show_bug.cgi?id=228246
        <rdar://72949281>

        Reviewed by Eric Carlson.

        * Scripts/Preferences/WebPreferences.yaml:

2021-07-23  Chris Dumez  <cdumez@apple.com>

        SharedBuffer::takeData() is a bit dangerous
        https://bugs.webkit.org/show_bug.cgi?id=228161

        Reviewed by Darin Adler.

        Add Vector::uncheckedAppend() overload that takes in a Span.

        * wtf/Vector.h:
        (WTF::Vector::uncheckedAppend):
        (WTF::Malloc>::uncheckedAppend):

2021-07-23  Robert Jenner  <Jenner@apple.com>

        Unreviewed, reverting r280205.
